project(GridGen)

add_executable(FixFaults fix_faults.cpp)
add_executable(FixTiny fix_tiny.cpp)
add_executable(UniteFaces unite_faces.cpp)
add_executable(Dual dual.cpp)
add_executable(Slice slice.cpp)
add_executable(SliceFunc slice_func.cpp)
add_executable(SplitNonplanar split_nonplanar.cpp)
add_executable(CollapseDegenerate collapse_degenerate.cpp)
add_executable(Bnd2Stl bnd2stl.cpp)
add_executable(Sector sector.cpp)
add_executable(Sew sew.cpp)
add_executable(Scale scale.cpp)
add_executable(Move move.cpp)
add_executable(Convert convert.cpp)
add_executable(SameMeshDifference difference_same.cpp)
add_executable(MeshDifference difference_map.cpp)
add_executable(Kmeans kmeans.cpp)
add_library(FractureLib fracture.cpp fracture.h)

target_link_libraries(FixFaults inmost)
if(USE_MPI)
  message("linking FixFaults with MPI")
  target_link_libraries(FixFaults ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(FixFaults PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)
install(TARGETS FixFaults EXPORT inmost-targets RUNTIME DESTINATION bin)

target_link_libraries(FixTiny inmost)
if(USE_MPI)
  message("linking FixTiny with MPI")
  target_link_libraries(FixTiny ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(FixTiny PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)
install(TARGETS FixTiny EXPORT inmost-targets RUNTIME DESTINATION bin)

target_link_libraries(UniteFaces inmost)
if(USE_MPI)
  message("linking UniteFaces with MPI")
  target_link_libraries(UniteFaces ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(UniteFaces PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)
install(TARGETS UniteFaces EXPORT inmost-targets RUNTIME DESTINATION bin)


target_link_libraries(Dual inmost)
if(USE_MPI)
  message("linking Dual with MPI")
  target_link_libraries(Dual ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(Dual PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)
install(TARGETS Dual EXPORT inmost-targets RUNTIME DESTINATION bin)


target_link_libraries(Slice inmost)
if(USE_MPI)
  message("linking Slice with MPI")
  target_link_libraries(Slice ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(Slice PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)
install(TARGETS Slice EXPORT inmost-targets RUNTIME DESTINATION bin)


target_link_libraries(SliceFunc inmost)
if(USE_MPI)
  message("linking SliceFunc with MPI")
  target_link_libraries(SliceFunc ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(SliceFunc PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)
install(TARGETS SliceFunc EXPORT inmost-targets RUNTIME DESTINATION bin)


target_link_libraries(SplitNonplanar inmost)
if(USE_MPI)
  message("linking SplitNonplanar with MPI")
  target_link_libraries(SplitNonplanar ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(SplitNonplanar PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)
install(TARGETS SplitNonplanar EXPORT inmost-targets RUNTIME DESTINATION bin)


target_link_libraries(CollapseDegenerate inmost)
if(USE_MPI)
  message("linking CollapseDegenerate with MPI")
  target_link_libraries(CollapseDegenerate ${MPI_LIBRARIES}) 
  if(MPI_LINK_FLAGS)
    set_target_properties(CollapseDegenerate PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif() 
endif(USE_MPI)
install(TARGETS CollapseDegenerate EXPORT inmost-targets RUNTIME DESTINATION bin)


target_link_libraries(Bnd2Stl inmost)
if(USE_MPI)
  message("linking Bnd2Stl with MPI")
  target_link_libraries(Bnd2Stl ${MPI_LIBRARIES})
  if(MPI_LINK_FLAGS)
    set_target_properties(Bnd2Stl PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif()
endif(USE_MPI)
install(TARGETS Bnd2Stl EXPORT inmost-targets RUNTIME DESTINATION bin)

target_link_libraries(Sector inmost)
if(USE_MPI)
  message("linking Sector with MPI")
  target_link_libraries(Sector ${MPI_LIBRARIES})
  if(MPI_LINK_FLAGS)
    set_target_properties(Sector PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif()
endif(USE_MPI)
install(TARGETS Sector EXPORT inmost-targets RUNTIME DESTINATION bin)

target_link_libraries(Sew inmost)
if(USE_MPI)
  message("linking Sew with MPI")
  target_link_libraries(Sew ${MPI_LIBRARIES})
  if(MPI_LINK_FLAGS)
    set_target_properties(Sew PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif()
endif(USE_MPI)
install(TARGETS Sew EXPORT inmost-targets RUNTIME DESTINATION bin)

target_link_libraries(Scale inmost)
if(USE_MPI)
  message("linking Scale with MPI")
  target_link_libraries(Scale ${MPI_LIBRARIES})
  if(MPI_LINK_FLAGS)
    set_target_properties(Scale PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif()
endif(USE_MPI)
install(TARGETS Scale EXPORT inmost-targets RUNTIME DESTINATION bin)


target_link_libraries(Move inmost)
if(USE_MPI)
  message("linking Move with MPI")
  target_link_libraries(Move ${MPI_LIBRARIES})
  if(MPI_LINK_FLAGS)
    set_target_properties(Move PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif()
endif(USE_MPI)
install(TARGETS Move EXPORT inmost-targets RUNTIME DESTINATION bin)

target_link_libraries(Convert inmost)
if(USE_MPI)
  message("linking Convert with MPI")
  target_link_libraries(Convert ${MPI_LIBRARIES})
  if(MPI_LINK_FLAGS)
    set_target_properties(Convert PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif()
endif(USE_MPI)
install(TARGETS Convert EXPORT inmost-targets RUNTIME DESTINATION bin)

target_link_libraries(SameMeshDifference inmost)
if(USE_MPI)
  message("linking SameMeshDifference with MPI")
  target_link_libraries(SameMeshDifference ${MPI_LIBRARIES})
  if(MPI_LINK_FLAGS)
    set_target_properties(SameMeshDifference PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif()
endif(USE_MPI)
install(TARGETS SameMeshDifference EXPORT inmost-targets RUNTIME DESTINATION bin)

target_link_libraries(MeshDifference inmost)
if(USE_MPI)
  message("linking MeshDifference with MPI")
  target_link_libraries(MeshDifference ${MPI_LIBRARIES})
  if(MPI_LINK_FLAGS)
    set_target_properties(MeshDifference PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif()
endif(USE_MPI)
install(TARGETS MeshDifference EXPORT inmost-targets RUNTIME DESTINATION bin)

target_link_libraries(Kmeans inmost)
if(USE_MPI)
  message("linking Kmeans with MPI")
  target_link_libraries(Kmeans ${MPI_LIBRARIES})
  if(MPI_LINK_FLAGS)
    set_target_properties(Kmeans PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
  endif()
endif(USE_MPI)
install(TARGETS Kmeans EXPORT inmost-targets RUNTIME DESTINATION bin)


set_property(TARGET FractureLib PROPERTY PUBLIC_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/fracture.h")

install(TARGETS FractureLib EXPORT inmost-targets 
        LIBRARY DESTINATION lib 
        ARCHIVE DESTINATION lib
        PUBLIC_HEADER DESTINATION include)

